--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "node-purpleschool",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "node --watch index.js"
