--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "node --watch index.js"
+    "start": "node --watch index.js"
   },
   "author": "",
   "license": "ISC",
