--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
 {
   "name": "node-purpleschool",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "node --watch index.js"
+  "main": "weather.js",
+  "type": "module",
+  "bin": {
+    "weather": "./8-weather-extended/weather.js"
   },
+  "scripts": {
+    "start": ""
+  },
+  "keywords": [
+    "cli",
+    "weather"
+  ],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "axios": "^1.7.9",
+    "chalk": "^5.4.1",
+    "cross-env": "^7.0.3",
+    "dedent": "^1.5.3"
+  }
 }
