--- a/package.json
+++ b/package.json
@@ -3,16 +3,26 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
+  "bin": "./10-weather-cli/dist/index.js",
   "scripts": {
-    "test": "node --watch index.js"
+    "start": ""
   },
+  "keywords": [
+    "cli",
+    "weather"
+  ],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
+    "chalk": "^5.4.1",
+    "dedent": "^1.5.3",
     "express": "^4.21.2"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0"
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.12.0",
+    "typescript": "^5.7.3"
   }
 }
